---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: ????
  Info:
    - Revert 06e0299, connecting shall replace both end caps
    - Get rid of the single/duo
    - Figure out how to connect the textures without going through hell
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024. 11. 22
  Info:
    - Begin giving disconnected undergrounds a heat pipe
    - Draw the disconnected sprite in its default state
    - Remove the directional heat pipe upon pipe to ground removal
    - Well rip, normal heat pipes are still visually connecting
    - Prevent connections in unauthorized directions
    - Allow the underground heat pipe to be rotated
    - Same pipe prototypes always visually connect, checkerboard alternate them
    - Preserve heat when rotating
    - Fast rotate does not preserve temperature
    - Delete the old heat pipe after the new one to prevent blinking
    - Change the horizontal and vertical to sit between the undergrounds
    - Prepare the mode that can connect to what's behind
    - Switch structs from single to dual mode when connected
    - Only set the ending sprite for the current direction
    - Get the visuals to behave how i want
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024. 11. 21
  Info:
    - Calculate which heatpipe length is required to link the two
    - Data tweaks
    - Place the long heat pipe between the undergrounds
    - Shift the heat pipe endings to the far ends
    - Prevent the center from showing a sprite
    - Make the connectors show capped off initially
    - Make sure the capped ones do not creep through the textuere
    - Oh just great, some side by side heat pipes are connecting even when there are no connections
    - Ponder whether i should continue using 1 heat pipe (endpoint freezing)