@@ -5,6 +5,7 @@ Date: ????
     - Revert 06e0299, connecting shall replace both end caps
     - Get rid of the single/duo
     - Figure out how to connect the textures without going through hell
+    - Apparently heat pipes are 1-1, even though they will still try to connect
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2024. 11. 22
